--- a/PluginForKompas/Global/Properties/Resources.resx
+++ b/PluginForKompas/Global/Properties/Resources.resx
@@ -117,7 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
+  <data name="centerHole" xml:space="preserve">
+    <value>Diameter of the center hole</value>
+  </data>
+  <data name="circumentalHoles" xml:space="preserve">
+    <value>Diameter of hte circumential holes</value>
+  </data>
+  <data name="count" xml:space="preserve">
+    <value>Count of gear teeth</value>
+  </data>
+  <data name="hexagonDepth" xml:space="preserve">
+    <value>Depth of the hexagon dip</value>
+  </data>
+  <data name="hexagonDiameter" xml:space="preserve">
+    <value>Diameter of the hexagon</value>
+  </data>
+  <data name="rigidity" xml:space="preserve">
+    <value>Rigidity of gear unit</value>
+  </data>
+  <data name="stiffenerDepth" xml:space="preserve">
+    <value>Stiffener depth</value>
+  </data>
+  <data name="stiffenerWidth" xml:space="preserve">
+    <value>Stiffener width</value>
+  </data>
 </root>
